# 42_dslr

./: README.md  pyproject.toml  requirements.txt  testing.ipynb
docs/: README.md
notebooks/: check_data_quality.py  test_model.ipynb
src/: bonus_other_gd.py  logreg_predict.py  logreg_train.py
src/domain/: gradient_descent_strategy.py  logistic_regression.py
src/domain/utils/: __init__.py  requires_training.py
tests/: test_logistic_regression.py
tests/practice/: dataset_visuals.ipynb  enums.py  logistic_regression_example.py  model_draft.ipynb  model_draft.py  np_matrix.py  np_mean_returner.py  np_ndarray.py  np_unique.py  numpy_functionality.py
